[gd_scene load_steps=11 format=3 uid="uid://brptu8uiook6b"]

[ext_resource type="Script" path="res://Scripts/explanation.gd" id="1_c5fxr"]
[ext_resource type="Texture2D" uid="uid://dtrop46rbte6k" path="res://resources/images/background/wave pattern.png" id="2_rejwp"]
[ext_resource type="Texture2D" uid="uid://ccrqrfd6aflpd" path="res://resources/images/islands/Inseln-Grundlagen.svg" id="3_rcfry"]
[ext_resource type="Texture2D" uid="uid://cgt72wc7v4s5j" path="res://resources/images/multiple_choice_Tasks/Frage Fenster2.0.png" id="4_8y1nx"]
[ext_resource type="Texture2D" uid="uid://b4wdau3wrw3rk" path="res://resources/images/buttons/white_button.svg" id="5_yfisk"]
[ext_resource type="Texture2D" uid="uid://rt20u5iqsmym" path="res://resources/images/common/pause menu/pause.png" id="6_ae6wg"]
[ext_resource type="PackedScene" uid="uid://cu2sqwh1j3cby" path="res://Scenes/pause_menu.tscn" id="7_e3pjf"]
[ext_resource type="Texture2D" uid="uid://di08uaxmkwkst" path="res://resources/images/common/pause menu/backToIslands.png" id="8_bpjkl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6mo8p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yget6"]

[node name="explanation" type="Node2D"]
script = ExtResource("1_c5fxr")

[node name="background" type="TextureRect" parent="."]
offset_left = -172.0
offset_top = -28.0
offset_right = 1328.0
offset_bottom = 1472.0
scale = Vector2(0.989114, 0.483818)
texture = ExtResource("2_rejwp")

[node name="Islands" type="TextureRect" parent="."]
offset_left = 318.926
offset_top = 22.3707
offset_right = 1818.93
offset_bottom = 1522.37
scale = Vector2(0.459595, 0.412328)
texture = ExtResource("3_rcfry")

[node name="FrageFenster2_0" type="Sprite2D" parent="."]
position = Vector2(573, 322)
scale = Vector2(1.29565, 1.28938)
texture = ExtResource("4_8y1nx")

[node name="explanation_text" type="TextEdit" parent="."]
offset_left = 157.0
offset_top = 180.0
offset_right = 886.0
offset_bottom = 377.0
theme_override_colors/background_color = Color(1, 0.976471, 0.933333, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
test"
placeholder_text = "here text"
wrap_mode = 1
scroll_fit_content_height = true

[node name="DoneButton" type="TextureButton" parent="."]
offset_left = 661.0
offset_top = 479.0
offset_right = 1245.0
offset_bottom = 646.0
scale = Vector2(0.471238, 0.724721)
size_flags_vertical = 8
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_yfisk")
ignore_texture_size = true

[node name="Label" type="Label" parent="DoneButton"]
layout_mode = 0
offset_left = 167.643
offset_top = 68.9921
offset_right = 240.643
offset_bottom = 123.992
scale = Vector2(2.67291, 1.15257)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "okay"

[node name="Pause" type="Button" parent="."]
offset_left = 1076.0
offset_top = 10.0
offset_right = 1194.0
offset_bottom = 128.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxEmpty_6mo8p")
icon = ExtResource("6_ae6wg")

[node name="PauseMenu" parent="." instance=ExtResource("7_e3pjf")]
visible = false

[node name="BackToIslands" type="Button" parent="."]
offset_left = 1076.0
offset_top = 83.0
offset_right = 1194.0
offset_bottom = 201.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxEmpty_yget6")
icon = ExtResource("8_bpjkl")
